--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,30 @@
+name: bobbleshootergame
+description: A new Flutter project.
+publish_to: 'none'
+
+version: 1.0.0+1
+
+environment:
+  sdk: '>=3.0.0 <4.0.0'
+
 dependencies:
   flutter:
     sdk: flutter
-  google_mobile_ads: ^3.0.0 # Latest version dekh lein
+  
+  # Google AdMob package
+  google_mobile_ads: ^5.0.0
+  
+  # AdMob ke background ads ke liye packages
+  workmanager: ^0.5.2
+  shared_preferences: ^2.2.3
+
+dev_dependencies:
+  flutter_test:
+    sdk: flutter
+  flutter_lints: ^4.0.0
+
+flutter:
+  uses-material-design: true
+  # assets:
+  #  - images/a_dot_burr.jpeg
+  #  - images/a_dot_ham.jpeg
